# backend/src/server/middlewares/index.js
@@ -1,9 +1,11 @@
 const RequestValidator = require("./RequestValidator");
 const Authentication = require("./Authentication");
+const AdminAuthentication = require("./AdminAuthentication");
 const errorHandler = require("./ErrorHandler");
 
 module.exports = {
     RequestValidator,
     Authentication,
-    errorHandler
+    errorHandler,
+    AdminAuthentication
 };
